After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787398 - mpeg2dec :Fix Memory leak issue in gstmpeg2dec.c
mpeg2dec :Fix Memory leak issue in gstmpeg2dec.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
1.12.2
Other All
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-07 08:01 UTC by Satya Prakash Gupta
Modified: 2017-09-16 08:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (699 bytes, patch)
2017-09-07 08:01 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-09-07 08:01:33 UTC
Created attachment 359325 [details] [review]
Patch file is attached.

Hi , 

  There is memory leak in gstmpeg2dec.c Below is observation 

Function  gst_mpeg2dec_crop_buffer  Line : 508

There is memory leak in gstmpeg2dec.c file as in case of fail "gst_video_frame_copy" allocated memory should be unref.


Solution :  gst_video_frame_unmap (&output_frame);

++patch is attched for possible solution.
Kindly review the patch and provide your feedback.
Comment 1 Sebastian Dröge (slomo) 2017-09-07 09:56:49 UTC
commit c7594c4acb4f13957d82fd3c0e75aa14fab5d1f4 (HEAD -> master)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Thu Sep 7 13:27:26 2017 +0530

    mpeg2dec: Unmap output video frame if copying to it fails
    
    https://bugzilla.gnome.org/show_bug.cgi?id=787398
Comment 2 Sebastian Dröge (slomo) 2017-09-07 09:57:17 UTC
Please try to provide a more informative commit message in the future :)