mpeg2dec: Unmap output video frame if copying to it fails

https://bugzilla.gnome.org/show_bug.cgi?id=787398